--- a/install/kubernetes/chart/stackgres-operator/templates/cluster-crd.yaml
+++ b/install/kubernetes/chart/stackgres-operator/templates/cluster-crd.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   group: {{ .Values.group }}
   versions:
-    - name: v1
+    - name: {{ .Values.crd.version }}
       served: true
       storage: true
   scope: Namespaced  
