Added pgbouncer configuration

--- a/install/kubernetes/chart/stackgres-operator/values.yaml
+++ b/install/kubernetes/chart/stackgres-operator/values.yaml
@@ -2,6 +2,9 @@
 postgresVersion:
   minimum: 11.5
 
+pgbouncerVersion:
+  default: 1.11
+
 operatorName: "stackgres-operator"
 operatorNamespace: "stackgres"
 operatorVersion: "master"
