--- a/operator/src/test/resources/stackgres-v1alpha1-sgcluster-cr.yaml
+++ b/operator/src/test/resources/stackgres-v1alpha1-sgcluster-cr.yaml
@@ -7,6 +7,7 @@ spec:
   pg_version: 11
   pg_config: postgresconf
   resource_profile: size-xs
+  pgbouncer_config: pgbouncerconf
   sidecars:
   - pgbouncer
   - postgres-utils
