--- a/operator/install/kubernetes/chart/stackgres-operator/templates/pgbouncerconfig-crd.yaml
+++ b/operator/install/kubernetes/chart/stackgres-operator/templates/pgbouncerconfig-crd.yaml
@@ -1,13 +1,13 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: sgpgconfigs.{{ .Values.group }}
+  name: sgpgbouncerconfigs.{{ .Values.group }}
   annotations:
     "helm.sh/hook": crd-install
 spec:
   group: {{ .Values.group }}
   versions:
-    - name: v1
+    - name: {{ .Values.crd.version }}
       served: true
       storage: true
   scope: Namespaced
