Update definition of profiles CRD
Signed-off-by: Kadaffy Talavera <kadaffy@ongres.com>

--- a/operator/install/kubernetes/chart/stackgres-operator/templates/profiles-crd.yaml
+++ b/operator/install/kubernetes/chart/stackgres-operator/templates/profiles-crd.yaml
@@ -26,14 +26,10 @@ spec:
         spec:
           type: object
           properties:
-            cpuRequests:
+            cpu:
               type: string
-            memoryRequests:
-              type: string
-            cpuLimits:
-              type: string
-            memoryLimits:
-              type: string
+            memory:
+              type: string            
             volumeSize:
               type: string
-          required: ["cpuRequests","memoryRequests","cpuLimits","memoryLimits","volumeSize"]
+          required: ["cpu","memory","volumeSize"]
