--- a/operator/install/kubernetes/chart/stackgres-cluster/templates/stackgres_sgprofiles_cr.yaml
+++ b/operator/install/kubernetes/chart/stackgres-cluster/templates/stackgres_sgprofiles_cr.yaml
@@ -3,10 +3,8 @@ kind: StackGresProfile
 metadata:
   name: size-xs
 spec:
-  cpuRequests: "500m"
-  memoryRequests: "512Mi"
-  cpuLimits: "500m"
-  memoryLimits: "512Mi"
+  cpu: "500m"
+  memory: "512Mi"  
   volumeSize: "5Gi"
   # storageClass: my-sc
 ---
@@ -15,10 +13,8 @@ kind: StackGresProfile
 metadata:
   name: size-s
 spec:
-  cpuRequests: "1"
-  memoryRequests: "2Gi"
-  cpuLimits: "1"
-  memoryLimits: "2Gi"
+  cpu: "1"
+  memory: "2Gi"  
   volumeSize: "25Gi"
   # storageClass: my-sc
 ---
@@ -27,10 +23,8 @@ kind: StackGresProfile
 metadata:
   name: size-m
 spec:
-  cpuRequests: "2"
-  memoryRequests: "4Gi"
-  cpuLimits: "2"
-  memoryLimits: "4Gi"
+  cpu: "2"
+  memory: "4Gi"  
   volumeSize: "38Gi"
   # storageClass: my-sc
 ---
@@ -39,10 +33,8 @@ kind: StackGresProfile
 metadata:
   name: size-l
 spec:
-  cpuRequests: "4"
-  memoryRequests: "8Gi"
-  cpuLimits: "4"
-  memoryLimits: "8Gi"
+  cpu: "4"
+  memory: "8Gi"  
   volumeSize: "115Gi"
   # storageClass: my-sc
 ---
@@ -51,10 +43,8 @@ kind: StackGresProfile
 metadata:
   name: size-xl
 spec:
-  cpuRequests: "6"
-  memoryRequests: "16Gi"
-  cpuLimits: "6"
-  memoryLimits: "16Gi"
+  cpu: "6"
+  memory: "16Gi"  
   volumeSize: "270Gi"
   # storageClass: my-sc
 ---
@@ -63,9 +53,7 @@ kind: StackGresProfile
 metadata:
   name: size-xxl
 spec:
-  cpuRequests: "8"
-  memoryRequests: "32Gi"
-  cpuLimits: "8"
-  memoryLimits: "32Gi"
+  cpu: "8"
+  memory: "32Gi"  
   volumeSize: "580Gi"
   # storageClass: my-sc
