--- a/operator/install/kubernetes/chart/stackgres-cluster/templates/stackgres_cluster_cr.yaml
+++ b/operator/install/kubernetes/chart/stackgres-cluster/templates/stackgres_cluster_cr.yaml
@@ -1,11 +1,13 @@
+{{ if .Values.cluster.create }}
 apiVersion: stackgres.io/{{ .Values.crd.version }}
 kind: StackGresCluster
 metadata:
   name: {{ .Values.cluster.name }}
 spec:
   instances: {{ .Values.cluster.instances }}
-  pg_version: {{ .Values.postgresql.version }}
+  pg_version: {{ .Values.config.postgresql.version }}
   pg_config: {{ .Values.cluster.pgconfig }}
+  pgbouncer_config: {{ .Values.cluster.pgbouncerconfig }}
   resource_profile: {{ .Values.cluster.profile }}
   sidecars:
   {{- if .Values.sidecar.pooling }}
@@ -14,3 +16,4 @@ spec:
   {{- if .Values.sidecar.utils }}
   - postgres-utils
   {{- end }}
+{{ end }}
