--- a/operator/install/kubernetes/chart/stackgres-operator/templates/cluster-role.yaml
+++ b/operator/install/kubernetes/chart/stackgres-operator/templates/cluster-role.yaml
@@ -17,19 +17,22 @@ rules:
   - secrets
   - statefulsets
   - deployments
-  - clusterroles
-  - clusterrolebindings
-  - serviceaccounts
   - namespaces
-  - roles
-  - rolebindings
   verbs:
-  - '*'
+  - get
+  - list
+  - watch
+  - update
+  - create
+  - delete
+  - patch
 - apiGroups: ["apiextensions.k8s.io", "customresourcedefinitions.apiextensions.k8s.io"]
   resources:
   - customresourcedefinitions
   verbs:
-  - '*'
+  - get
+  - list
+  - watch
 - apiGroups: ["{{ .Values.group }}"]
   resources:
   - sgclusters
