Renamed pgbouncer to pooling
Signed-off-by: Kadaffy Talavera <kadaffy@ongres.com>

--- a/operator/install/kubernetes/chart/stackgres-cluster/values.yaml
+++ b/operator/install/kubernetes/chart/stackgres-cluster/values.yaml
@@ -10,7 +10,7 @@ cluster:
   name: "stackgres"
   instances: 1
   pgconfig: postgresconf
-  pgbouncerconfig: pgbouncerconf
+  poolingconfig: pgbouncerconf
   profile: size-xs
 
 sidecar:
