Added connection prefix to pooling
Signed-off-by: Kadaffy Talavera <kadaffy@ongres.com>

--- a/operator/install/kubernetes/chart/stackgres-cluster/templates/stackgres_pgbouncerconfig_cr.yaml
+++ b/operator/install/kubernetes/chart/stackgres-cluster/templates/stackgres_pgbouncerconfig_cr.yaml
@@ -1,6 +1,6 @@
 {{ if .Values.config.create }}
 apiVersion: stackgres.io/{{ .Values.crd.version }}
-kind: StackGresPoolingConfig
+kind: StackGresConnectionPoolingConfig
 metadata:
   name: {{ .Values.cluster.poolingconfig }}
 spec:
