--- a/operator/install/kubernetes/chart/stackgres-operator/templates/poolingconfig-crd.yaml
+++ b/operator/install/kubernetes/chart/stackgres-operator/templates/poolingconfig-crd.yaml
@@ -1,7 +1,7 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: sgpoolingconfigs.{{ .Values.group }}
+  name: sgconnectionpoolingconfigs.{{ .Values.group }}
   annotations:
     "helm.sh/hook": crd-install
 spec:
@@ -12,10 +12,10 @@ spec:
       storage: true
   scope: Namespaced
   names:
-    kind: StackGresPoolingConfig
-    listKind: StackGresPoolingConfigList
-    plural: sgpoolingconfigs
-    singular: sgpoolingconfig
+    kind: StackGresConnectionPoolingConfig
+    listKind: StackGresConnectionPoolingConfigList
+    plural: sgconnectionpoolingconfigs
+    singular: sgconnectionpoolingconfig
   validation:
     openAPIV3Schema:
       type: object
