Added Storage Class to cluster CRD
Signed-off-by: Kadaffy Talavera <kadaffy@ongres.com>

--- a/operator/install/kubernetes/chart/stackgres-cluster/templates/stackgres_cluster_cr.yaml
+++ b/operator/install/kubernetes/chart/stackgres-cluster/templates/stackgres_cluster_cr.yaml
@@ -9,6 +9,7 @@ spec:
   pg_config: {{ .Values.cluster.pgconfig }}
   connection_pooling_config: {{ .Values.cluster.poolingconfig }}
   resource_profile: {{ .Values.cluster.profile }}
+  storage_class: {{ .Values.cluster.storageclass }}
   sidecars:
   {{- if .Values.sidecar.pooling }}
   - connection-pooling
