Moved volume size from profile CRD to cluster CRD

--- a/operator/install/kubernetes/chart/stackgres-cluster/values.yaml
+++ b/operator/install/kubernetes/chart/stackgres-cluster/values.yaml
@@ -12,6 +12,7 @@ cluster:
   pgconfig: postgresconf
   poolingconfig: pgbouncerconf
   profile: size-xs
+  volumesize: 5Gi
   storageclass: standard
 
 sidecar:
