--- a/operator/install/kubernetes/chart/stackgres-operator/values.yaml
+++ b/operator/install/kubernetes/chart/stackgres-operator/values.yaml
@@ -1,11 +1,11 @@
 operatorName: "stackgres-operator"
 operatorNamespace: "stackgres"
-operatorVersion: "development"
+operatorVersion: "0.6"
 group: "stackgres.io"
 
 image:
   name: "stackgres/operator"
-  tag: "development-jvm"
+  tag: "0.6-jvm"
   pullPolicy: "IfNotPresent"
 
 crd:
