--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>io.stackgres</groupId>
   <artifactId>stackgres-parent</artifactId>
-  <version>0.6beta2-SNAPSHOT</version>
+  <version>0.6</version>
   <packaging>pom</packaging>
   <name>Parent POM</name>
 
@@ -43,7 +43,7 @@
     <maven.compiler.source>${java.version}</maven.compiler.source>
     <maven.compiler.target>${java.version}</maven.compiler.target>
     <!-- Dependencies versions -->
-    <quarkus.version>0.21.1</quarkus.version>
+    <quarkus.version>0.21.2</quarkus.version>
     <kubernetes-client.version>4.4.2</kubernetes-client.version>
     <immutables.version>2.7.5</immutables.version>
     <javax.annotation-api.version>1.3.2</javax.annotation-api.version>
