--- a/operator/src/main/resources/application.properties
+++ b/operator/src/main/resources/application.properties
@@ -4,7 +4,7 @@
 #
 
 # Logger Production
-quarkus.log.console.format=%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p [%c{2.}] (%t) %s%n
+quarkus.log.console.format=%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p [%c{2.}] (%t) %s%e%n
 quarkus.log.console.level=INFO
 quarkus.log.category."io.quarkus".level=WARN
 
