--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
     <maven.compiler.target>${java.version}</maven.compiler.target>
     <!-- Dependencies versions -->
     <quarkus.version>0.21.2</quarkus.version>
+    <jool.version>0.9.14</jool.version>
     <kubernetes-client.version>4.4.2</kubernetes-client.version>
     <immutables.version>2.7.5</immutables.version>
     <javax.annotation-api.version>1.3.2</javax.annotation-api.version>
@@ -106,6 +107,11 @@
           <artifactId>*</artifactId>
         </exclusion>
       </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>org.jooq</groupId>
+      <artifactId>jool-java-8</artifactId>
+      <version>${jool.version}</version>
     </dependency>
     <dependency>
       <groupId>org.immutables</groupId>
