Enabled debug log

--- a/operator/src/main/resources/application.properties
+++ b/operator/src/main/resources/application.properties
@@ -5,8 +5,9 @@
 
 # Logger Production
 quarkus.log.console.format=%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p [%c{2.}] (%t) %s%e%n
-quarkus.log.console.level=INFO
-quarkus.log.category."io.quarkus".level=WARN
+quarkus.log.console.level=ALL
+quarkus.log.category."io.stackgres".level=ALL
+quarkus.log.category."io.quarkus".level=DEBUG
 
 # Logger Development
 %dev.quarkus.log.console.format=%d{HH:mm:ss} %-5p [%c{4.}] (%t) %s%e%n
