Created authenticator user to use in auth_user parameter of pgbouncer

--- a/sidecars/src/main/resources/pgbouncer-default-values.properties
+++ b/sidecars/src/main/resources/pgbouncer-default-values.properties
@@ -2,7 +2,7 @@ listen_port=6432
 listen_addr=0.0.0.0
 unix_socket_dir=/var/run/postgresql
 auth_type=md5
-auth_user=postgres
+auth_user=authenticator
 auth_query=SELECT usename, passwd FROM pg_shadow WHERE usename=$1
 admin_users=postgres
 stats_users=postgres
