--- a/operator/install/kubernetes/chart/stackgres-cluster/templates/stackgres_cluster_cr.yaml
+++ b/operator/install/kubernetes/chart/stackgres-cluster/templates/stackgres_cluster_cr.yaml
@@ -15,8 +15,8 @@ spec:
   {{- if .Values.sidecar.pooling }}
   - connection-pooling
   {{ end }}
-  {{- if .Values.sidecar.utils }}
-  - postgres-utils
+  {{- if .Values.sidecar.util }}
+  - postgres-util
   {{- end }}
   {{- if .Values.sidecar.prometheus }}
   - prometheus-postgres-exporter
