--- a/operator/install/kubernetes/chart/stackgres-cluster/templates/stackgres_cluster_cr.yaml
+++ b/operator/install/kubernetes/chart/stackgres-cluster/templates/stackgres_cluster_cr.yaml
@@ -18,4 +18,7 @@ spec:
   {{- if .Values.sidecar.utils }}
   - postgres-utils
   {{- end }}
+  {{- if .Values.sidecar.prometheus }}
+  - prometheus-postgres-exporter
+  {{- end }}
 {{ end }}
