--- a/pom.xml
+++ b/pom.xml
@@ -45,9 +45,10 @@
     <!-- Dependencies versions -->
     <quarkus.version>0.21.2</quarkus.version>
     <jool.version>0.9.14</jool.version>
-    <kubernetes-client.version>4.4.2</kubernetes-client.version>
+    <kubernetes-client.version>4.6.0</kubernetes-client.version>
     <immutables.version>2.7.5</immutables.version>
     <javax.annotation-api.version>1.3.2</javax.annotation-api.version>
+    <javax.validation-api.version>2.0.1.Final</javax.validation-api.version>
     <checkstyle.version>8.23</checkstyle.version>
     <spotbugs.version>4.0.0-beta3</spotbugs.version>
     <checker.version>2.10.1</checker.version>
@@ -123,6 +124,11 @@
       <groupId>javax.annotation</groupId>
       <artifactId>javax.annotation-api</artifactId>
       <version>${javax.annotation-api.version}</version><!--$NO-MVN-MAN-VER$-->
+    </dependency>
+    <dependency>
+      <groupId>javax.validation</groupId>
+      <artifactId>validation-api</artifactId>
+      <version>${javax.validation-api.version}</version><!--$NO-MVN-MAN-VER$-->
     </dependency>
     <dependency>
       <groupId>org.checkerframework</groupId>
