--- a/operator/pom.xml
+++ b/operator/pom.xml
@@ -157,6 +157,10 @@
     </profile>
     <profile>
       <id>integration</id>
+      <properties>
+        <quarkus.http.ssl.certificate.file>resources/server.crt</quarkus.http.ssl.certificate.file>
+        <quarkus.http.ssl.certificate.key-file>resources/root.key</quarkus.http.ssl.certificate.key-file>
+      </properties>
       <build>
         <plugins>
           <plugin>
