--- a/operator/src/main/resources/application.properties
+++ b/operator/src/main/resources/application.properties
@@ -17,6 +17,6 @@ quarkus.log.category."io.quarkus".level=DEBUG
 
 # StackGres Configuration
 stackgres.namespace = stackgres-operator
-quarkus.http.ssl.certificate.file=/etc/operator/certs/server.crt
-quarkus.http.ssl.certificate.key-file=/etc/operator/certs/root.key
+quarkus.http.ssl.certificate.file=${quarkus.http.ssl.certificate.file}
+quarkus.http.ssl.certificate.key-file=${quarkus.http.ssl.certificate.key-file}
 quarkus.ssl.native=true
