Included verifier in IT

--- a/pom.xml
+++ b/pom.xml
@@ -266,7 +266,7 @@
                     </goals>
                   </pluginExecutionFilter>
                   <action>
-                    <ignore></ignore>
+                    <execute></execute>
                   </action>
                 </pluginExecution>
               </pluginExecutions>
