Add service monitor if service monitor CRD exists

--- a/operator/install/kubernetes/chart/stackgres-operator/templates/cluster-role.yaml
+++ b/operator/install/kubernetes/chart/stackgres-operator/templates/cluster-role.yaml
@@ -76,3 +76,18 @@ rules:
   - watch
   - list
   - get
+{{- if .Values.prometheus.allowAutobind }}
+- apiGroups: ["monitoring.coreos.com"]
+  resources:
+  - servicemonitors
+  verbs:
+  - list
+  - get
+  - create
+- apiGroups: ["monitoring.coreos.com"]
+  resources:
+  - prometheus
+  verbs:
+  - list
+  - get
+{{- end }}
