--- a/operator/install/kubernetes/chart/stackgres-operator/templates/cluster-role.yaml
+++ b/operator/install/kubernetes/chart/stackgres-operator/templates/cluster-role.yaml
@@ -29,6 +29,27 @@ rules:
   - create
   - delete
   - patch
+- apiGroups: ["certificates.k8s.io"]
+  resources:
+  - certificatesigningrequests
+  verbs:
+  - get
+  - create
+  - delete
+{{- if .Values.cert.autoapprove }}
+- apiGroups: ["certificates.k8s.io"]
+  resources:
+  - certificatesigningrequests/approval
+  verbs:
+  - update
+{{- end }}
+- apiGroups: ["admissionregistration.k8s.io"]
+  resources:
+  - validatingwebhookconfigurations
+  verbs:
+  - get
+  - update
+  - patch
 - apiGroups: ["apiextensions.k8s.io", "customresourcedefinitions.apiextensions.k8s.io"]
   resources:
   - customresourcedefinitions
