--- a/operator/install/kubernetes/chart/stackgres-operator/templates/deployment.yaml
+++ b/operator/install/kubernetes/chart/stackgres-operator/templates/deployment.yaml
@@ -59,5 +59,5 @@ spec:
       volumes:
         - name: operator-certs
           secret:
-            secretName: {{ .Values.operatorName }}.{{ .Values.operatorNamespace }}
+            secretName: {{ .Values.operatorName }}
 {{ end }}
