--- a/operator/src/main/resources/application.properties
+++ b/operator/src/main/resources/application.properties
@@ -20,3 +20,5 @@ stackgres.namespace = stackgres-operator
 quarkus.http.ssl.certificate.file=${quarkus.http.ssl.certificate.file}
 quarkus.http.ssl.certificate.key-file=${quarkus.http.ssl.certificate.key-file}
 quarkus.ssl.native=true
+stackgres.supported.major.versions=10,11
+stackgres.latest.minor.versions=10,5
