fix: Update all IT code to use new IT image

--- a/operator/install/kubernetes/chart/stackgres-operator/templates/init-job.yaml
+++ b/operator/install/kubernetes/chart/stackgres-operator/templates/init-job.yaml
@@ -22,7 +22,7 @@ spec:
         image: "bitnami/kubectl:latest"
         imagePullPolicy: "Always"
         command:
-          - "/bin/bash"
+          - "/bin/sh"
           - "-ecx"
           - |
             function init() {
