--- a/operator/pom.xml
+++ b/operator/pom.xml
@@ -208,11 +208,11 @@
                         <cleanup>try</cleanup>
                         <optimise>true</optimise>
                         <runCmds>
-                          <run>wget -q -L -O /bin/kubectl https://storage.googleapis.com/kubernetes-release/release/v1.12.10/bin/linux/amd64/kubectl</run>
+                          <run>wget -q -O /bin/kubectl https://storage.googleapis.com/kubernetes-release/release/v1.12.10/bin/linux/amd64/kubectl</run>
                           <run>chmod a+x /bin/kubectl</run>
-                          <run>wget -q -L -O /bin/kind  https://github.com/kubernetes-sigs/kind/releases/download/v0.5.1/kind-$(uname)-amd64</run>
+                          <run>wget -q -O /bin/kind  https://github.com/kubernetes-sigs/kind/releases/download/v0.5.1/kind-$(uname)-amd64</run>
                           <run>chmod a+x /bin/kind</run>
-                          <run>wget -q -L https://get.helm.sh/helm-v2.14.3-linux-amd64.tar.gz -O -|tar xz --strip-components=1 -C /bin -f - linux-amd64/helm</run>
+                          <run>wget -q https://get.helm.sh/helm-v2.14.3-linux-amd64.tar.gz -O -|tar xz --strip-components=1 -C /bin -f - linux-amd64/helm</run>
                         </runCmds>
                       </build>
                     </image>
