Validate CRs in the admission webhook Fix issues regarding about the cluster resources installation order

--- a/operator/install/kubernetes/chart/stackgres-cluster/templates/stackgres_pgbouncerconfig_cr.yaml
+++ b/operator/install/kubernetes/chart/stackgres-cluster/templates/stackgres_pgbouncerconfig_cr.yaml
@@ -3,6 +3,8 @@ apiVersion: stackgres.io/{{ .Values.crd.version }}
 kind: StackGresConnectionPoolingConfig
 metadata:
   name: {{ .Values.cluster.poolingconfig }}
+  annotations:
+    "helm.sh/hook": "pre-install"
 spec:
   pgbouncer_version: "{{ .Values.config.pgbouncer.version }}"
   pgbouncer.ini:
