--- a/operator/install/kubernetes/chart/stackgres-cluster/templates/stackgres_pgconfig_cr.yaml
+++ b/operator/install/kubernetes/chart/stackgres-cluster/templates/stackgres_pgconfig_cr.yaml
@@ -3,6 +3,8 @@ apiVersion: stackgres.io/{{ .Values.crd.version }}
 kind: StackGresPostgresConfig
 metadata:
   name: {{ .Values.cluster.pgconfig }}
+  annotations:
+    "helm.sh/hook": "pre-install"
 spec:
   pg_version: "{{ .Values.config.postgresql.version }}"
   postgresql.conf:
