--- a/operator/install/kubernetes/chart/stackgres-operator/templates/resource-validator.yaml
+++ b/operator/install/kubernetes/chart/stackgres-operator/templates/resource-validator.yaml
@@ -13,7 +13,7 @@ webhooks:
         apiVersions: ["*"]
         resources: ["sgclusters"]
         scope: "*"
-    failurePolicy: Ignore
+    failurePolicy: Fail
     clientConfig:
       service:
         namespace: {{ .Values.operatorNamespace }}
