--- a/operator/install/kubernetes/chart/stackgres-cluster/templates/stackgres_profiles_cr.yaml
+++ b/operator/install/kubernetes/chart/stackgres-cluster/templates/stackgres_profiles_cr.yaml
@@ -3,6 +3,8 @@ apiVersion: stackgres.io/{{ .Values.crd.version }}
 kind: StackGresProfile
 metadata:
   name: size-xs
+  annotations:
+    "helm.sh/hook": "pre-install"
 spec:
   cpu: "500m"
   memory: "512Mi"
@@ -11,6 +13,8 @@ apiVersion: stackgres.io/{{ .Values.crd.version }}
 kind: StackGresProfile
 metadata:
   name: size-s
+  annotations:
+    "helm.sh/hook": "pre-install"
 spec:
   cpu: "1"
   memory: "2Gi"
@@ -19,6 +23,8 @@ apiVersion: stackgres.io/{{ .Values.crd.version }}
 kind: StackGresProfile
 metadata:
   name: size-m
+  annotations:
+    "helm.sh/hook": "pre-install"
 spec:
   cpu: "2"
   memory: "4Gi"
@@ -27,6 +33,8 @@ apiVersion: stackgres.io/{{ .Values.crd.version }}
 kind: StackGresProfile
 metadata:
   name: size-l
+  annotations:
+    "helm.sh/hook": "pre-install"
 spec:
   cpu: "4"
   memory: "8Gi"
@@ -35,6 +43,8 @@ apiVersion: stackgres.io/{{ .Values.crd.version }}
 kind: StackGresProfile
 metadata:
   name: size-xl
+  annotations:
+    "helm.sh/hook": "pre-install"
 spec:
   cpu: "6"
   memory: "16Gi"
@@ -43,6 +53,8 @@ apiVersion: stackgres.io/{{ .Values.crd.version }}
 kind: StackGresProfile
 metadata:
   name: size-xxl
+  annotations:
+    "helm.sh/hook": "pre-install"
 spec:
   cpu: "8"
   memory: "32Gi"
